--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,13 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "headers": [{
+      "source": "**/*.@(jpg|jpeg|gif|png|js|css)",
+      "headers": [ {
+        "key": "Cache-Control",
+        "value": "max-age=3600"
+      }]
+    }]
   }
 }
