--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "js-cookie": "^3.0.5",
     "nuxt": "^3.15.1",
+    "uuid": "^11.0.5",
     "vue": "latest",
+    "vue-gtag": "^2.0.1",
     "vue-router": "latest",
     "vue-scrollto": "^2.20.0"
   },
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "sass-embedded": "^1.83.1",
     "vite-plugin-vuetify": "^2.0.4",
     "vuetify": "^3.7.6"
